samples/_failures_safe/1760960571_6bd3f7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b443060f.c: In function ‘pointcloud_free’:
./samples/SAFE/__tmp_b443060f.c:122:5: error: expected declaration or statement at end of input
  122 |     pc->count = 0;
      |     ^~
